--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ninja something (monkeys)</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <canvas id="myCanvas">
+    </canvas>
+
+    <script src="script.js">
+    </script>
 </body>
 </html>
