--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Ninja something</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="cut">
     <canvas id="canvas"></canvas>
     <script src="script.js"></script>
 </body>
