--- a/mainpage.html
+++ b/mainpage.html
@@ -9,14 +9,12 @@
 <body>
     <h1 id="title">aim tester</h1>
     <div class="box">
-        <div>dette spillet er inspirert av fruitninja</div>
+        <div>aim tester er inspirert av fruitninja og skal teste dine reaksjonsferdigheter</div>
         <div id="box2">fruit ninja kom ut 21 april, 2010. det ble produsert av Halfbrick. målet i spillet er å kutte frukt på en skjerm med 
             fingerbevegelser. det er også mulig å kutte bomber.
         </div>
-        <div>hei</div>
-        <div><a href="index.html">til spillet</a></div>
+        <div id="funfact"></div>
+        <div id="tilspill"><a href="index.html">til spillet</a></div>
     </div>
-
-    <script src="main.js"></script>
 </body>
 </html>
