--- a/mainpage.html
+++ b/mainpage.html
@@ -9,7 +9,7 @@
 <body>
     <h1 id="title">aim tester</h1>
     <div class="box">
-        <div>aim tester er inspirert av fruitninja og skal teste dine reaksjonsferdigheter</div>
+        <div id="box1">aim tester er inspirert av fruitninja og skal teste dine reaksjonsferdigheter</div>
         <div id="box2">fruit ninja kom ut 21 april, 2010. det ble produsert av Halfbrick. målet i spillet er å kutte frukt på en skjerm med 
             fingerbevegelser. det er også mulig å kutte bomber.
         </div>
