score i top venstre

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body id="cut">
     <canvas id="canvas"></canvas>
+    <div class="info">
+        <h1>Score: 0</h1>
     <script src="script.js"></script>
 </body>
 </html>
