vis score liv og tid + reset

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body id="cut">
     <canvas id="canvas"></canvas>
     <div class="info">
-        <h1>Score: 0</h1>
+        <p id="score">score: 0</p>
+        <p id="lives">liv: 0</p>
+        <p id="time">tid: 3 s</p>
     <script src="script.js"></script>
 </body>
 </html>
