--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ninja something</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body id="cut">
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body id="cut">
     <canvas id="canvas"></canvas>
     <div class="info">
-        <p id="score">score: 0</p>
-        <p id="lives">liv: 0</p>
-        <p id="time">tid: 3 s</p>
+      <p id="score">score: 0</p>
+      <p id="lives">liv: 0</p>
+      <p id="time">tid: 3 s</p>
+    </div>
+    
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
