gameover html for test av design

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
       <p id="score">score: 0</p>
       <p id="lives">liv: 0</p>
       <p id="time">tid: 3 s</p>
+      <div class="gameover">
+        <h1>Game Over</h1>
+      </div>
     </div>
-    
+
     <script src="script.js"></script>
   </body>
 </html>
