--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body id="cut">
     <canvas id="canvas"></canvas>
     <div class="info">
-      <p id="score">score: 0</p>
-      <p id="lives">liv: 0</p>
-      <p id="time">tid: 3 s</p>
+      <p id="score">Score: 0</p>
+      <p id="lives">Lives: 3</p>
+      <p id="time">Time: 3s</p>
       <div class="gameover">
         <h1>Game Over</h1>
       </div>
