--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
       <p id="score">Score: 0</p>
       <p id="lives">Lives: 3</p>
       <p id="time">Time: 3s</p>
-      <div class="gameover">
-        <h1>Game Over</h1>
-      </div>
+    </div>
+    <div class="gameover" onclick="location.reload()">
+      <h1>Game Over</h1>
+      <p id="restart">Click to restart</p>
     </div>
 
     <script src="script.js"></script>
