--- a/mainpage.html
+++ b/mainpage.html
@@ -13,7 +13,7 @@
         <div id="box2">fruit ninja kom ut 21 april, 2010. det ble produsert av Halfbrick. målet i spillet er å kutte frukt på en skjerm med 
             fingerbevegelser. det er også mulig å kutte bomber.
         </div>
-        <div id="funfact">test for media query</div>
+        <div id="funfact">i dette spillet har du tre liv, for hver gang du bommer tre ganger mister du et liv. Hver gang du treffer den røde prikken kuttes tiden du har på å treffe den neste ned.</div>
         <div id="tilspill"><a href="index.html">til spillet</a></div>
     </div>
 </body>
