hjelp fra Rasmus - fiks i css og js

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <p id="score">Score: 0</p>
       <p id="lives">Lives: 3</p>
       <p id="time">Time: 3s</p>
+      <p id="highscore">Highscore: 0</p>
     </div>
     <div class="gameover" onclick="location.reload()">
       <h1>Game Over</h1>
